--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,10 @@
     "@tauri-apps/plugin-store": "^2.4.1",
     "antd": "^5.28.1",
     "axios": "^1.13.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1",
+    "react-scripts": "5.0.1"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
@@ -25,7 +27,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
-    "typescript": "~5.8.3",
+    "typescript": "^4.9.5",
     "vite": "^7.0.4"
   }
 }
